--- a/Website/index.html
+++ b/Website/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <!-- Side Menu -->
       <nav class="sidebar">
-        <button type="button-init" class="button-init" onclick="createAllCharts(); this.style.display = 'none'; refreshAll()">Start automatic Data Tracking (Debug)</button>
+        <button type="button-init" class="button-init" onclick="createAllCharts(); this.style.display = 'none'">Start automatic Data Tracking (Debug)</button>
       </nav>
 
       <!-- Main Area -->
